--- a/circle.yml
+++ b/circle.yml
@@ -4,12 +4,19 @@ machine:
 dependencies:
     pre:
         - sudo apt-get install build-essential
+        - make build
     override:
         - docker info
         - docker
 test:
     override:
         - make test
+deployment:
+    beta:
+        branch: master
+        commands:
+            - docker login -e $DOCKER_EMAIL -u $DOCKER_USER -p $DOCKER_PASS
+            - docker push arla/todomvc
 notify:
     webhooks:
-    - url: http://beta.kiloe.net/service=todomvc&image=arla/todomvc&branch=master&token=9h05igzeeueZzMu2lIMWvjIWSexLD3oqmR0zW1eHA7U
+        - url: http://beta.kiloe.net/service=todomvc&image=arla/todomvc&branch=master&token=$CDD_TOKEN
