--- a/circle.yml
+++ b/circle.yml
@@ -19,4 +19,4 @@ deployment:
             - docker push arla/todomvc
 notify:
     webhooks:
-        - url: http://beta.kiloe.net/service=todomvc&image=arla/todomvc&branch=master&token=$CDD_TOKEN
+        - url: http://beta.kiloe.net:8080/service=todomvc&image=arla/todomvc&branch=master&token=$CDD_TOKEN
