--- a/circle.yml
+++ b/circle.yml
@@ -7,7 +7,6 @@ dependencies:
         - make build
     override:
         - docker info
-        - docker
 test:
     override:
         - make test
@@ -16,7 +15,7 @@ deployment:
         branch: master
         commands:
             - docker login -e $DOCKER_EMAIL -u $DOCKER_USER -p $DOCKER_PASS
-            - docker push arla/todomvc
+            - make release
 notify:
     webhooks:
         - url: http://beta.kiloe.net:8080/service=todomvc&image=arla/todomvc&branch=master&token=$CDD_TOKEN
