--- a/circle.yml
+++ b/circle.yml
@@ -16,4 +16,9 @@ deployment:
         commands:
             - docker login -e $DOCKER_EMAIL -u $DOCKER_USER -p $DOCKER_PASS
             - make release
-            - curl --fail -d '-p 8000:80 -v /var/lib/state/todomvc:/var/state -e AUTH_SECRET=testing -e DEBUG=true' "http://cdd.beta.kiloe.net/?service=todomvc&image=arla/todomvc&token=$CDD_TOKEN"
+            - curl --fail "http://cdd.beta.kiloe.net/todomvc&token=$CDD_TOKEN"
+        branch: production
+        commands:
+            - docker login -e $DOCKER_EMAIL -u $DOCKER_USER -p $DOCKER_PASS
+            - make release
+            - curl --fail "http://cdd.stable.kiloe.net/todomvc&token=$CDD_TOKEN"
