--- a/circle.yml
+++ b/circle.yml
@@ -15,10 +15,12 @@ deployment:
         branch: master
         commands:
             - docker login -e $DOCKER_EMAIL -u $DOCKER_USER -p $DOCKER_PASS
+            - export TAG=":beta"
             - make release
             - curl --fail "http://cdd.beta.kiloe.net/todomvc&token=$CDD_TOKEN"
         branch: production
         commands:
             - docker login -e $DOCKER_EMAIL -u $DOCKER_USER -p $DOCKER_PASS
+            - export TAG=":stable"
             - make release
             - curl --fail "http://cdd.stable.kiloe.net/todomvc&token=$CDD_TOKEN"
