--- a/circle.yml
+++ b/circle.yml
@@ -12,13 +12,14 @@ test:
     - make test
 deployment:
   beta:
-    - branch: master
-      commands:
-        - docker login -e $DOCKER_EMAIL -u $DOCKER_USER -p $DOCKER_PASS
-        - TAG=":beta" make release
-        - curl --fail "http://cdd.beta.kiloe.net/todomvc?token=$CDD_TOKEN"
-    - branch: production
-      commands:
-        - docker login -e $DOCKER_EMAIL -u $DOCKER_USER -p $DOCKER_PASS
-        - export TAG=":stable"; make release
-        - curl --fail "http://cdd.stable.kiloe.net/todomvc?token=$CDD_TOKEN"
+    branch: master
+    commands:
+      - docker login -e $DOCKER_EMAIL -u $DOCKER_USER -p $DOCKER_PASS
+      - TAG=":beta" make release
+      - curl --fail "http://cdd.beta.kiloe.net/todomvc?token=$CDD_TOKEN"
+  stable:
+    branch: production
+    commands:
+      - docker login -e $DOCKER_EMAIL -u $DOCKER_USER -p $DOCKER_PASS
+      - export TAG=":stable"; make release
+      - curl --fail "http://cdd.stable.kiloe.net/todomvc?token=$CDD_TOKEN"
