--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "dependencies": {
     "kefir": "^1.1.0",
     "node-uuid": "^1.4.2",
-    "react": "^0.13.0-beta.1",
+    "react": "^0.13.3",
     "whatwg-fetch": "^0.7.0"
   },
   "devDependencies": {
