--- a/package.json
+++ b/package.json
@@ -4,10 +4,9 @@
   "description": "Arla/React Application.",
   "main": "src/app.js",
   "dependencies": {
-    "kefir": "^1.1.0",
-    "node-uuid": "^1.4.2",
     "react": "^0.13.3",
-    "whatwg-fetch": "^0.7.0"
+    "arla-client": "^0.0.7",
+    "uuid": "^2.0.1"
   },
   "devDependencies": {
     "babelify": "^6.1.2"
